src/test/ui/const-generics/issue-61336.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/issue-61336.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error: array lengths can't depend on generic parameters
  --> $DIR/issue-61336.rs:5:9
   |
LL |     [x; N]
   |         ^

error: array lengths can't depend on generic parameters
  --> $DIR/issue-61336.rs:10:9
   |
LL |     [x; N]
   |         ^

error: aborting due to 2 previous errors

